# api/models/call.go
@@ -163,8 +163,14 @@ type Call struct {
 type CallFilter struct {
 	Path     string // match
 	AppID    string // match
+	FnID     string //match
 	FromTime common.DateTime
 	ToTime   common.DateTime
 	Cursor   string
 	PerPage  int
+}
+
+type CallList struct {
+	NextCursor string  `json:"next_cursor,omitempty"`
+	Items      []*Call `json:"items"`
 }
