# docs/swagger_v2.yml
@@ -404,6 +404,77 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
+  /fns/{fnID}/calls:
+    get:
+      summary: Get a fns calls.
+      description: Get a functions calls, results returned in created_at, descending order (newest first).
+      tags:
+        - Call
+      parameters:
+        - $ref: '#/parameters/FnID'
+        - $ref: '#/parameters/cursor'
+        - $ref: '#/parameters/perPage'
+        - name: from_time
+          description: Unix timestamp in seconds, of call.created_at to begin the results at, default 0.
+          required: false
+          type: integer
+          in: query
+        - name: to_time
+          description: Unix timestamp in seconds, of call.created_at to end the results at, defaults to latest.
+          required: false
+          type: integer
+          in: query
+      responses:
+        200:
+          description: "List of Calls"
+          schema:
+            $ref:  '#/definitions/CallList'
+        404:
+          description: "Calls not found"
+          schema:
+            $ref: '#/definitions/Error'
+
+  /fns/{fnID}/calls/{callID}:
+    get:
+      summary: Get call information
+      description: Get call information
+      tags:
+        - Call
+      parameters:
+        - $ref: '#/parameters/FnID'
+        - $ref: '#/parameters/CallID'
+      responses:
+        200:
+          description: Call found.
+          schema:
+            $ref:  '#/definitions/Call'
+        404:
+          description: Call not found.
+          schema:
+            $ref: '#/definitions/Error'
+
+  # Implementing next
+  # /fns/{fnID}/calls/{callID}/log:
+  #   get:
+  #     operationId: "GetCallLogs"
+  #     summary: "Get logs for a call."
+  #     description: "Get logs for a call."
+  #     tags:
+  #       - Call
+  #       - Log
+  #     parameters:
+  #       - $ref: '#/parameters/FnIDQuery'
+  #       - $ref: '#/parameters/CallID'
+  #     responses:
+  #       200:
+  #         description: Log found.
+  #         schema:
+  #           $ref:  '#/definitions/Log'
+  #       404:
+  #         description: Log not found.
+  #         schema:
+  #           $ref: '#/definitions/Error'
+
 definitions:
   App:
     type: object
@@ -591,6 +662,102 @@ definitions:
         type: string
         readOnly: true
 
+  Call:
+    type: object
+    properties:
+      id:
+        type: string
+        description: Call ID.
+        readOnly: true
+      status:
+        type: string
+        description: Call execution status.
+        readOnly: true
+      error:
+        type: string
+        description: Call execution error, if status is 'error'.
+        readOnly: true
+      app_id:
+        type: string
+        description: App ID of fn that executed this call.
+        readOnly: true
+      fn_id:
+        type: string
+        description: Fn ID of fn that executed this call.
+        readOnly: true
+      created_at:
+        type: string
+        format: date-time
+        description: Time when call was submitted. Always in UTC.
+        readOnly: true
+      started_at:
+        type: string
+        format: date-time
+        description: Time when call started execution. Always in UTC.
+        readOnly: true
+      completed_at:
+        type: string
+        format: date-time
+        description: Time when call completed, whether it was successul or failed. Always in UTC.
+        readOnly: true
+      stats:
+        type: array
+        items:
+          $ref: '#/definitions/Stat'
+        description: A histogram of stats for a call, each is a snapshot of a calls state at the timestamp.
+        readOnly: true
+
+  CallList:
+    type: object
+    required:
+      - items
+    properties:
+      next_cursor:
+        type: string
+        description: "Cursor to send with subsequent request to recieve next page, if non-empty."
+        readOnly: true
+      items:
+        type: array
+        items:
+          $ref: '#/definitions/Call'
+
+  Stat:
+    type: object
+    properties:
+      timestamp:
+        type: string
+        format: date-time
+      metrics:
+        type: object
+        properties:
+          net_rx:
+            type: integer
+            format: int64
+          net_tx:
+            type: integer
+            format: int64
+          mem_limit:
+            type: integer
+            format: int64
+          mem_usage:
+            type: integer
+            format: int64
+          disk_read:
+            type: integer
+            format: int64
+          disk_write:
+            type: integer
+            format: int64
+          cpu_user:
+            type: integer
+            format: int64
+          cpu_total:
+            type: integer
+            format: int64
+          cpu_kernel:
+            type: integer
+            format: int64
+
 parameters:
   cursor:
     name: cursor
@@ -621,6 +788,12 @@ parameters:
     name: triggerID
     in: path
     description: "Opaque, unique Trigger ID."
+    required: true
+    type: string
+  CallID:
+    name: callID
+    in: path
+    description: "Opaque, unique Call ID."
     required: true
     type: string
 
